--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.3.0",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "mysql2": "^3.12.0",
     "next": "15.1.5",
+    "prisma": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
