--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.3.0",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "next": "15.1.5",
     "prisma": "^6.3.0",
